--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,90 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap");
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  margin-top: 37px;
+  margin-bottom: 62px;
+}
+
+section {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 111px;
+  width: 580px;
+  margin-bottom: 50px;
+  padding-bottom: 20px;
+  border-bottom: 1px #e5e5e5 solid;
 }
 
-.App-link {
-  color: #61dafb;
+section > img {
+  width: 64px;
+  height: 90px;
+  object-fit: cover;
+  margin-right: 10px;
+  margin-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+section > p
+section .logo {
+flex: 1;
+}
+
+.logo {
+  width: 80px;
+}
+
+h1 {
+  font-weight: bold;
+}
+
+.time {
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center; 
+}
+
+.details {
+  flex: 6 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-self: flex-start;
+}
+
+.details > h2 {
+  font-size: 15px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.details > p {
+  font-size: 12px;
+  margin-bottom: 5px;
+}
+
+.duration {
+  font-weight: bold;
+  font-size: 12px;
+  margin-bottom: 5px;
+  display: flex;
+}
+
+.duration > p {
+  width: 60px;
+}
+
+li {
+  color: red;
 }
